fixed Cart Overflowing problem

--- a/src/App.scss
+++ b/src/App.scss
@@ -16,6 +16,7 @@
       gap: 2rem;
     }
     @include media-breakpoint-up($lg) {
+      @include my(4rem);
       gap: 5rem;
     }
   }
