--- a/src/components/Cart.scss
+++ b/src/components/Cart.scss
@@ -3,16 +3,16 @@
 .Cart {
   position: absolute;
   z-index: 5;
-  width: 400px;
-  max-width: 400px;
   background-color: #fff;
-  top: 5.5rem;
+  top: $h-nav + 0.4rem;
+  left: 0;
   right: 0;
   border-radius: 0.8rem;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
     rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
   @include mx(0.5rem);
-  @include media-breakpoint-up($md) {
+  @include media-breakpoint-up($xs) {
+    width: 400px;
     left: unset;
   }
   & > * {
