--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -1,5 +1,5 @@
 @import "../mixin.scss";
-$h-nav: 5rem;
+
 .Nav {
   height: $h-nav;
   display: flex;
