--- a/src/mixin.scss
+++ b/src/mixin.scss
@@ -5,6 +5,7 @@ $md: 768px;
 $lg: 1024px;
 $xl: 1280px;
 $t-func: cubic-bezier(0.4, 0, 0.2, 1);
+$h-nav: 6rem;
 
 @mixin px($value: 0rem) {
   padding-left: $value;
